Minor clean up